Updated CMAKE.txt to include the other project files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,18 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-#add_executable(01-object-construction 01-object-construction/object_construction.cpp)
-#add_executable(02a-pimpl 02a-pimpl/pimpl.cpp)
-#add_executable(02b-pimpl-poly 02b-pimpl-poly/pimpl.cpp)
-#add_executable(02c-better-pimpl-poly 02c-better-pimpl-poly/pimpl.cpp)
-#add_executable(03-smart-pointers 03-smart-pointers/smart.cpp)
-#add_executable(04-raii 04-raii/raii.cpp)
-#add_executable(05-entity-component 05-entity-component/main.cpp)
-#add_executable(06-concept-model 06-concept-model/main.cpp)
-#add_executable(07-singleton 07-singleton/main.cpp)
-#add_executable(08-factory 08-factory/main.cpp)
-#add_executable(09-data-driven 09-data-driven/main.cpp)
-#add_executable(10-state 10-state/main.cpp)
+add_executable(01-object-construction 01-object-construction/object_construction.cpp)
+add_executable(02a-pimpl 02a-pimpl/pimpl.cpp)
+add_executable(02b-pimpl-poly 02b-pimpl-poly/pimpl.cpp)
+add_executable(02c-better-pimpl-poly 02c-better-pimpl-poly/pimpl.cpp)
+add_executable(03-smart-pointers 03-smart-pointers/smart.cpp)
+add_executable(04-raii 04-raii/raii.cpp)
+add_executable(05-entity-component 05-entity-component/main.cpp)
+add_executable(06-concept-model 06-concept-model/main.cpp)
+add_executable(07-singleton 07-singleton/main.cpp)
+add_executable(08-factory 08-factory/main.cpp)
+add_executable(09-data-driven 09-data-driven/main.cpp)
+add_executable(10-state 10-state/main.cpp)
 add_executable(11-messaging 11-messaging/main.cpp)
 add_executable(98-engine-simple 98-engine-simple/main.cpp)
 add_executable(99-engine 99-engine/main.cpp)
