--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(adv-games-dev
 "SDL2_ttf"
 "SDL2test"
 "assimp-vc140-mt"
+"winmm"
 )
 
 
@@ -40,8 +41,12 @@ add_custom_target(copy_resources ALL
           "${PROJECT_SOURCE_DIR}/shader" "${CMAKE_BINARY_DIR}"
 		  COMMAND ${CMAKE_COMMAND} -E copy_directory
 		  "${PROJECT_SOURCE_DIR}/Font" "${CMAKE_BINARY_DIR}"
+		  COMMAND ${CMAKE_COMMAND} -E copy_directory
+          "${PROJECT_SOURCE_DIR}/sounds" "${CMAKE_BINARY_DIR}"
           COMMAND ${CMAKE_COMMAND} -E copy_directory
           "${CMAKE_SOURCE_DIR}/dll" "${EXE_LOCATION}/Debug"
+		  COMMAND ${CMAKE_COMMAND} -E copy_directory
+          "${CMAKE_SOURCE_DIR}/dll" "${EXE_LOCATION}/Release"
           )
 
 add_dependencies(adv-games-dev  copy_resources)
